<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="blog"
            type="com.ghostware.technext.models.BlogAuthor" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:alignContent="flex_start"
            app:flexDirection="row"
            app:flexWrap="wrap">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/cover_photo"
                android:maxWidth="200dp" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text='@{blog.title ?? ""}'
                android:textColor="@color/black" />
        </com.google.android.flexbox.FlexboxLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text='@{blog.description ?? ""}' />

        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/authorImage"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/author_image_contentdes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text='@{blog.author.name ?? ""}' />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text='@{blog.author.profession ?? ""}' />
        </LinearLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignContent="flex_start"
            app:flexDirection="row"
            app:flexWrap="wrap" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/edit_blog"
            android:textAllCaps="false" />
    </LinearLayout>
</layout>